<resources>
    <string name="app_name">HW_2_Calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_multiplication">*</string>
    <string name="button_division">/</string>
    <string name="button_equals">=</string>
    <string name="button_dot">.</string>
    <string name="empty_monitor">0</string>
    <string name="button_c">C</string>
    <string name="first_screen_zero">0</string>
    <string name="result_template">%s%s</string>
    <string name="monitor_zero">0</string>
    <string name="string_dot">.</string>
    <string name="nght_theme_text">Включение ночной темы</string>
    <string name="night_mode">Night Mode</string>
    <string name="settings_button">Settings</string>
    <string name="save_button">Сохранить</string>

</resources>