<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:columnCount="4">

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minus"
        android:textSize="@dimen/button_text" />
    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiplication"
        android:textSize="@dimen/button_text" />
    <Button
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_division"
        android:textSize="@dimen/button_text" />

</GridLayout>